# ezEngine

./: CMakeLists.txt
Code/: CMakeLists.txt
Code/BuildSystem/CMake/: CMAKE_Application.txt  CMAKE_GlobUnitTests.txt  CMAKE_Install.txt  CMAKE_Library.txt  CMAKE_Plugin.txt  CMAKE_Qt.txt  ezEngineConfig.cmake.in  ezEngineInstallTargets.cmake
